# stm32g474_c_sniffer

./: .gitignore  .mxproject  CMakeLists.txt  stm32g474_c_sniffer.ioc
Core/Inc/: main.h  sniffer.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: main.c  sniffer.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
LCD_Display/: lv_conf.h
LCD_Display/Inc/: lvgl_port.h  st7789.h
LCD_Display/Inc/ui/: actions.h  fonts.h  images.h  screens.h  styles.h  ui.h
LCD_Display/Src/: fonts_.c  lvgl_port.c  st7789.c
LCD_Display/Src/ui/: images.c  screens.c  ui_image__.c  ui_image_a.c  ui_image_a_image.c  ui_image_cc1.c  ui_image_cc1_logo.c  ui_image_minus.c  ui_image_plus.c  ui_image_t.c  ui_image_v_logo.c  ui_image_w.c  ui_image_w_image.c
LCD_Display/lvgl/: lvgl.h
LCD_Display/lvgl/src/: lv_conf_internal.h
LCD_Display/lvgl/src/core/: lv_obj.c
LCD_Display/lvgl/src/examples/arduino/LVGL_Arduino/: LVGL_Arduino.ino
Middlewares/ST/STM32_USB_Device_Library/Class/THUNDER/Inc/: usbd_thunder.h
Middlewares/ST/STM32_USB_Device_Library/Class/THUNDER/Src/: usbd_thunder.c
USB_Device/App/: usb_device.c  usb_device.h  usb_device_app.c  usb_device_app.h  usb_thunder_if.c  usb_thunder_if.h  usbd_desc.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: g474_pd_sniffer_architecture.md
host/: CMakeLists.txt  README.md  plot_timeline.py
host/include/: analog.hpp  pd_decoder.hpp  record.hpp  usb_device.hpp
host/src/: analog.cpp  main.cpp  pd_decoder.cpp  record.cpp  usb_device.cpp
tools/: README.md  ep1_chunk_plot.py  pd_edge_decode.py
